Refactor formatter's main to use `ExecutorCompletionService`
PiperOrigin-RevId: 509606924